webrtc-streamer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: webrtc
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    name: webrtc
