webrtc-streamer/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webrtc
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: webrtc-cams.p.cns.me
      http:
        paths:
          - backend:
              serviceName: webrtc
              servicePort: 80
